--- a/index.html
+++ b/index.html
@@ -21,5 +21,10 @@
     </div>
   </section>
   <script src="script.js"></script>
+  <script>
+    window.onload=function(){
+      sessionStorage.clear();
+    }
+  </script>
   </body>
 </html>
